tests/paczka1/fuzzy1/67300487.err
Error in line 11: BSat S947 9,5
Error in line 3: WpcUOYtl S947 88,6
Error in line 12: BSat A47 54,7
Error in line 17: A47 A238 62,4
Error in line 21: I5vuWJMS A47 64,7
Error in line 29: I5vuWJMS A505 39,0
Error in line 36: I5vuWJMS A238 87,2
Error in line 31: hCmYLcMXHr A505 72,3
